# ags

./: .cirrus.yml  .disabled.cirrus.yml  .editorconfig  .gitattributes  .gitignore  .gitmodules  .travis.yml  CMAKE.md  CMakeLists.txt  CMakeSettings.json  CONTRIBUTING.md  Changes.txt  Copyright.txt  Credits.txt  License.txt  OPTIONS.md  README.md  ags+libraries_20181227.tar.xz  version.json
CMake/SDL_Sound/: CMakeLists.txt
Common/: CMakeLists.txt  CSCOMP.H  CSPARSER.CPP  Clib32.cpp  FMEM.CPP  MOUSEW32.CPP  Wgt2allg.h  acgfx.h  acgui.h  acplatfm.h  acroom.cpp  acroom.h  acroom_agsnative.cpp  acroom_engine.cpp  acroom_func.h  acroom_nofunc.h  acroom_save.cpp  acroom_savefunc.h  acruntim.h  acsound.h  agsplugin.h  bigend.h  cdrom32.cpp  compress.cpp  compress.h  cscommon.cpp  cscomp.h  csparser.cpp  csprepro.cpp  csprepro.h  csrun.cpp  fmem.h  lzw.cpp  macport.h  misc.cpp  misc.h  mouse32.cpp  mousew32.cpp  sprcache.cpp  sprcache.h  (+7 more)
Common/ac/: ac_actiontype.h  ac_animationstruct.h  ac_audioclip.h  ac_characterinfo.cpp  ac_characterinfo.h  ac_common.cpp  ac_common.h  ac_compress.cpp  ac_compress.h  ac_customproperties.cpp  ac_customproperties.h  ac_custompropertyschema.cpp  ac_custompropertyschema.h  ac_defines.h  ac_dialog.cpp  ac_dialog.h  ac_eventblock.cpp  ac_eventblock.h  ac_gamesetupstruct.cpp  ac_gamesetupstruct.h  ac_interaction.cpp  ac_interaction.h  ac_interfacebutton.cpp  ac_interfacebutton.h  ac_interfaceelement.cpp  ac_interfaceelement.h  ac_inventoryiteminfo.cpp  ac_inventoryiteminfo.h  ac_messageinfo.cpp  ac_messageinfo.h  ac_mousecursor.cpp  ac_mousecursor.h  ac_move.h  ac_object.h  ac_point.cpp  ac_point.h  ac_quit.h  ac_room.cpp  ac_room.h  ac_roomstruct.cpp  (+55 more)
Common/acfont/: ac_agsfontrenderer.cpp  ac_agsfontrenderer.h  ac_fonts.cpp  ac_ttffontrenderer.cpp  ac_ttffontrenderer.h  ac_wfnfontrenderer.cpp  ac_wfnfontrenderer.h
Common/acgui/: ac_dynamicarray.h  ac_guibutton.cpp  ac_guibutton.h  ac_guidefines.h  ac_guiinv.cpp  ac_guiinv.h  ac_guilabel.cpp  ac_guilabel.h  ac_guilistbox.cpp  ac_guilistbox.h  ac_guimain.cpp  ac_guimain.h  ac_guiobject.cpp  ac_guiobject.h  ac_guislider.cpp  ac_guislider.h  ac_guitextbox.cpp  ac_guitextbox.h
Common/acroom/: acroom_action.h  acroom_audio.h  acroom_core.h  acroom_defines.h  acroom_dialog.h  acroom_func_core.h  acroom_func_dictionary.h  acroom_func_interaction.h  acroom_func_room.h  acroom_func_script.h  acroom_gamestruct.h  acroom_interaction.h  acroom_lipsync.h  acroom_move.h  acroom_object.h  acroom_properties.h  acroom_room.h  acroom_script.h  acroom_view.h
Common/api/: stream_api.h
Common/core/: asset.cpp  asset.h  assetmanager.cpp  assetmanager.h  def_version.h  endianness.h  platform.h  types.h
Common/cs/: cc_compiledscript.cpp  cc_compiledscript.h  cc_dynamicarray.cpp  cc_dynamicarray.h  cc_dynamicobject.cpp  cc_dynamicobject.h  cc_error.cpp  cc_error.h  cc_instance.h  cc_internallist.h  cc_managedobjectpool.cpp  cc_managedobjectpool.h  cc_script.cpp  cc_script.h  cc_symboldef.h  cc_symboltable.cpp  cc_symboltable.h  cc_systemimports.h  cc_treemap.cpp  cc_treemap.h  cs_common.cpp  cs_common.h  cs_compiler.cpp  cs_compiler.h  cs_internal.h  cs_misc.h  cs_object.h  cs_parser.cpp  cs_parser_common.cpp  cs_runtime.cpp  cs_runtime.h  cs_utils.cpp  cs_utils.h
Common/data/: asset.cpp  asset.h  assetmanager.cpp  assetmanager.h  data_ext.cpp  data_helpers.cpp  data_helpers.h  multifilelib.cpp  multifilelib.h  tra_file.cpp  tra_file.h
Common/debug/: assert.h  debugmanager.cpp  debugmanager.h  messagebuffer.h  out.cpp  out.h  outputhandler.h  outputtarget.h
Common/font/: agsfontrenderer.cpp  agsfontrenderer.h  fonts.cpp  fonts.h  ttffontrenderer.cpp  ttffontrenderer.h  wfnfont.cpp  wfnfont.h  wfnfontrenderer.cpp  wfnfontrenderer.h
Common/game/: customproperties.cpp  customproperties.h  data_helpers.cpp  data_helpers.h  dialogtopicinfo.cpp  dialogtopicinfo.h  gameinfo.cpp  gameinfo.h  interactions.cpp  interactions.h  interactions_deprecated.cpp  interactions_deprecated.h  main_game_file.cpp  main_game_file.h  plugininfo.h  room_file.cpp  room_file.h  room_file_base.cpp  room_file_deprecated.cpp  room_version.h  roominfo.cpp  roominfo.h  roomstruct.cpp  roomstruct.h  scripteventstable.cpp  scripteventstable.h  scripteventtable.cpp  scripteventtable.h  tra_file.cpp  tra_file.h
Common/gfx/: allegrobitmap.cpp  allegrobitmap.h  bitmap.cpp  bitmap.h  bitmapdata.cpp  bitmapdata.h  blender.cpp  blender.h  gfx_def.h  graphics.cpp  graphics.h  image_bmp.cpp  image_file.cpp  image_file.h  image_pcx.cpp  image_png.cpp
Common/gui/: dynamicarray.h  guibutton.cpp  guibutton.h  guicontrol.cpp  guicontrol.h  guidefines.h  guiinv.cpp  guiinv.h  guilabel.cpp  guilabel.h  guilistbox.cpp  guilistbox.h  guimain.cpp  guimain.h  guiobject.cpp  guiobject.h  guislider.cpp  guislider.h  guitextbasedcontrol.cpp  guitextbasedcontrol.h  guitextbox.cpp  guitextbox.h
Common/libinclude/: AASTR.H  ALDUMB.H  ALFONT.H  DUMB.H  LIBCDA.H  aautil.h  alfont.h  aloggdll.h  dumb.h  genre.h  mpeg1dec.h  mpglib.h  winalleg.h
Common/obsolete/: ac_unused.cpp  ac_unused.h  cs_unused.cpp  eventblock.cpp  eventblock.h
Common/platform/: file.cpp  file.h  platform.h  types.h
Common/script/: cc_common.cpp  cc_common.h  cc_error.cpp  cc_error.h  cc_instance.cpp  cc_instance.h  cc_internal.h  cc_options.cpp  cc_options.h  cc_reflect.cpp  cc_reflect.h  (+6 more)
Compiler/: CMakeLists.txt  Makefile  compiler.cpp  compiler.h  fmem.cpp  fmem.h  main.cpp
Engine/: AC.CPP  ACSETUPD.CPP  ACWSETUP.CPP  BUILD  BUILD_QUICK  CMakeLists.txt  CompileShader.bat  DefaultGDF.gdf.xml  License.txt  Makefile  Makefile-defs.allegro  Makefile-defs.freetype  Makefile-defs.linux  Makefile-defs.osx  Makefile-objs  Makefile.linux  Makefile.osx  Makefile.psp  Makefile.rpi  VMR9Graph.h  ac.cpp  acaudio.cpp  acchars.cpp  acdebug.cpp  acdebug.h  acdialog.cpp  acfonts.cpp  acfonts_agsnative.cpp  acfonts_engine.cpp  acgfx.cpp  acgui.cpp  acgui_agsnative.cpp  acgui_engine.cpp  acpland.cpp  acplatfm.cpp  acplatfm.h  acpldos.cpp  acplios.cpp  acpllnx.cpp  acplmac.cpp  (+30 more)
Tools/: CMakeLists.txt
(+3657 files in other folders)
